<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/behavior_header">
        <SwitchPreferenceCompat
            app:key="display_always_on"
            app:title="@string/display_on"
            app:defaultValue="@bool/display_on_default_value"/>

    </PreferenceCategory>

    <!--TODO: Experiment with checkboxes in Minor and Modal subcategories -->
    <PreferenceCategory
        app:title="@string/pitches_header">
        <Preference
            app:key="enable_all_pitches"
            app:summary="Click to Enable All Pitches"
            app:title="Enable All">

        </Preference>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_0"
            app:title="C"></SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_1"
            app:title="C♯/D♭">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_2"
            app:title="D">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_3"
            app:title="D♯/E♭">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_4"
            app:title="E">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_5"
            app:title="F">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_6"
            app:title="F♯/G♭">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_7"
            app:title="G">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_8"
            app:title="G♯/A♭">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_9"
            app:title="A">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_10"
            app:title="A♯/B♭">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            app:defaultValue="@bool/pitches_default_value"
            app:key="pitch_11"
            app:title="B">

        </SwitchPreferenceCompat>


    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerBelow="false"
        app:title="@string/scale_types_header">

            <SwitchPreferenceCompat
                app:allowDividerBelow="false"
                app:defaultValue="@bool/major_default_value"
                app:key="major"
                app:title="Major"></SwitchPreferenceCompat>

        <PreferenceCategory
            app:allowDividerBelow="false"
            app:title="@string/minor_header">
            <SwitchPreferenceCompat
                app:defaultValue="@bool/minor_default_value"
                app:key="minor"
                app:summary="Enables/Disables Minor Scales"
                app:title="Minor"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:dependency="minor"
                app:key="minor_natural"
                app:title="Natural Minor"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:dependency="minor"
                app:key="minor_harmonic"
                app:title="Harmonic Minor"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:dependency="minor"
                app:key="minor_melodic"
                app:title="Melodic Minor"></SwitchPreferenceCompat>

        </PreferenceCategory>

        <PreferenceCategory
            app:allowDividerAbove="false"
            app:title="@string/modes_header">
            <SwitchPreferenceCompat
                app:defaultValue="@bool/modes_default_value"
                app:key="modes"
                app:summary="Enables/Disables Modal Scales"
                app:title="Modes"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:dependency="modes"
                app:key="modes_dorian"
                app:title="Dorian"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:dependency="modes"
                app:key="modes_phrygian"
                app:title="Phrygian"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:dependency="modes"
                app:key="modes_lydian"
                app:title="Lydian"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="true"
                app:dependency="modes"
                app:key="modes_mixolydian"
                app:title="Mixolydian"></SwitchPreferenceCompat>

            <SwitchPreferenceCompat
                app:defaultValue="false"
                app:dependency="modes"
                app:key="modes_locrian"
                app:title="Locrian"></SwitchPreferenceCompat>

        </PreferenceCategory>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">
        <Preference
            app:key="about"
            app:summary="Show App Info"
            app:title="About">

            <intent
                android:targetPackage="com.mitchell.scalepicker"
                android:targetClass="com.mitchell.scalepicker.about"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>